--- a/package.json
+++ b/package.json
@@ -5,6 +5,6 @@
 	"unity": "2019.2",
 	"description": "Ports Midi input from Keijiro's MidiJack package into Unity's new Input System Package.",
 	"dependencies": {
-
+		"com.unity.inputsystem": "0.2.10-preview"
 	}
 }
